Fixed breadcrumbs in demos on mobile devices

--- a/samples/BlazorWebAssembly/Shared/MainLayout.razor.css
+++ b/samples/BlazorWebAssembly/Shared/MainLayout.razor.css
@@ -30,10 +30,6 @@
     }
 
 @media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
     .top-row.auth {
         justify-content: space-between;
     }
